service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api-svc
spec:
  type: ClusterIP
  selector:
    app: auth-api
  ports:
    - port: 80
      targetPort: 80
