ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth_api_ingress
  labels:
    app.kubernetes.io/name: auth_api_ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: auth-api-svc
            port: 
              number: 80
